manifests/a_pod_w_2_containers.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: double
spec:
  containers:
  - name: debugshell-a
    image: k8s.ignition-training.com/djiang108/debugshell:1.0
    imagePullPolicy: Always
    command: [ "sleep" ]
    args: [ "inf" ]
  - name: debugshell-b
    image: k8s.ignition-training.com/djiang108/debugshell:1.0
    imagePullPolicy: Always
    command: [ "sleep" ]
    args: [ "inf" ]
  imagePullSecrets:
  - name: regcred
