manifests/a_pod_w_resource_limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: withlimits
spec:
  containers:
  - name: debugshell
    image: k8s.ignition-training.com/djiang108/debugshell:1.0
    imagePullPolicy: Always
    stdin: true
    tty: true
    resources:
      limits:
        memory: 200Mi
        cpu: 200m
  imagePullSecrets:
  - name: regcred
