manifests/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debugshell
spec:
  containers:
  - name: debugshell
    image: k8s.ignition-training.com/djiang108/debugshell:1.0
    imagePullPolicy: Always
    stdin: true
    tty: true
  imagePullSecrets:
  - name: regcred
