manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: lab701-nodejs-external
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: config-volume
        configMap:
          name: app-config 
      containers:
      - name: web-app-container
        image: k8s.ignition-training.com/djiang108/lab501:1.0  # insert image here!
        imagePullPolicy: Always
        resources:
          limits:
            memory: 30Mi
        envFrom: # This will bring in more variables than we use, no problem though
        - configMapRef:
            name: app-config 
        stdin: true
        tty: true
        ports:
          - name: greeting-port
            containerPort: 4545
        volumeMounts:
          - name: config-volume
            mountPath: /data
            readOnly: true
