manifests/mybusybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mybusybox
spec:
  containers:
  - name: mybusybox
    image: busybox
    command: ["sleep", "inf"]
