manifests/web_service_env_variables.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloservice
  labels:
    app: hello 
spec:
  ports:
  - targetPort: greeting-port
    port: 5859
  selector:
    app: hello
